--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <header>
     <div class="title">
       <h1 class="title-main">Facilito Blog</h1>
-      <h4 class="title-sub">Noticias del mundo tech</h4>
+      <h2 class="title-sub">Noticias del mundo tech</h2>
     </div>
-    <div id="menu-toggle" class="menu-toggle" onclick="changeState()">
+    <button id="menu-toggle" class="menu-toggle" onclick="changeState()" aria-label="menu de navegacion" aria-expanded="false">
       <div class="menu"></div>
-    </div>
+    </button>
     <div id="nav-container">
-      <div id="nav-menu" class="nav-menu">
+      <nav id="nav-menu" class="nav-menu">
         <ul>
           <li><a href="#" class="nav-menu--item">Home</a></li>
           <li><a href="#" class="nav-menu--item">Noticias</a></li>
@@ -29,7 +29,7 @@
           <li><a href="#" class="nav-menu--item">Móvil</a></li>
           <li><a href="#" class="nav-menu--item">Seguridad</a></li>
         </ul>
-      </div>
+      </nav>
     </div>
   </header>
 
@@ -37,10 +37,10 @@
     <section class="layout">
       <div class="layout-main">
         <article class="layout-main--article">
-          <h2 class="section-name">Actualidad</h2>
+          <h3 class="section-name">Actualidad</h3>
           <div class="img-container">
             <img
-              src="images/community.png"
+              src="images/community.png" alt=""
               class="article-img">
           </div>
           <div class="img-caption">Illustration by <a href="https://icons8.com/illustrations/author/60312013123f993d795ce208">Oleg Shcherba</a>
@@ -54,6 +54,11 @@
           <section class="section-calendar">
             <h2 class="section-name">Agenda</h2>
               <table>
+                <tr>
+                  <th> Evento </th>
+                  <th> Fecha </th>
+                  <th> Hora </th>
+                </tr>
                 <tr>
                   <td>Vacaciones con Cody</td>
                   <td>15/04/2021</td>
@@ -75,7 +80,7 @@
               </article>
               <div class="img-container">
                 <img
-                  src="images/abstract-error.png"
+                  src="images/abstract-error.png" alt=""
                   class="article-img article-img--small">
               </div>
             </div>
@@ -102,7 +107,7 @@
         <article class="layout-down--article">
           <div class="img-container">
             <img
-              src="images/security-2.png"
+              src="images/security-2.png" alt=""
               class="article-img">
           </div>
           <div class="img-caption">Illustration by <a href="https://icons8.com/illustrations/author/5e7e24ce01d0360013bb7479">Natasha Remarchuk</a> from <a
@@ -132,7 +137,7 @@
     <footer class="layout">
       <div class="layout-footer">
         <section class="layout-form">
-          <h4 class="form-title">Suscríbete a nuestro Newsletter</h4>
+          <h3 class="form-title">Suscríbete a nuestro Newsletter</h3>
           <form>
             <fieldset class="form-fieldset">
               <div class="form-fieldset field">
@@ -153,6 +158,7 @@
               </div>
             </fieldset>
             <div class="form-field block">
+              <label for="email">correo electonico</label>
               <input type="email" class="form-input" id="email" placeholder="Escribe aquí tu correo electrónico">
               <input type="submit" value="Suscribirse" class="form-submit">
             </div>
@@ -161,11 +167,11 @@
         <section class="layout-social">
           <ul class="social-list">
             <li class="social-icon"><a href="https://twitter.com/codigofacilito" target="_blank"><img
-                  src="https://img.icons8.com/ios-glyphs/30/000000/twitter--v1.png"/></a></li>
+                  src="https://img.icons8.com/ios-glyphs/30/000000/twitter--v1.png" alt="Ir al perfir de codigo facilito de twitter"/></a></li>
             <li class="social-icon"><a href="https://www.facebook.com/codigofacilito" target="_blank"><img
-                  src="https://img.icons8.com/windows/32/000000/facebook-f--v1.png"/></a></li>
+                  src="https://img.icons8.com/windows/32/000000/facebook-f--v1.png" alt="Ir al perfir de codigo facilito de facebook"/></a></li>
             <li class="social-icon"><a href="https://www.instagram.com/codigofacilito/" target="_blank"><img
-                  src="https://img.icons8.com/ios-glyphs/30/000000/instagram-new.png"/></a></li>
+                  src="https://img.icons8.com/ios-glyphs/30/000000/instagram-new.png" alt="Ir al perfir de codigo facilito de instagram"/></a></li>
           </ul>
         </section>
       </div>
